tests/syntax/bad/testfile-if3-1.scala
class A { def m() { if (true) } }
object Main { def main(args: Array[String]) { } }
